<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="#000000"
    tools:context=".FormActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:backgroundTint="#000000"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_new_24"
        app:subtitleTextColor="#FFFFFF"
        app:title="Add Animal"
        app:titleTextColor="#FFFFFF" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_form"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/poster_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/default_img"
                    tools:srcCompat="@drawable/default_img" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nama_TIL"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:textColorHint="#ACACAC"
                    app:boxStrokeColor="#FFFFFF"
                    app:hintTextColor="#FFFFFF"
                    app:layout_constraintEnd_toEndOf="@+id/imageView"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/imageView">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title_text"
                        android:inputType="text"
                        android:textColor="#FFFFFF"
                        android:textColorHighlight="#FFFFFF"
                        android:textColorHint="#FFFFFF" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/usia_TIL"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:textColorHint="#ACACAC"
                    app:boxStrokeColor="#FFFFFF"
                    app:hintTextColor="#FFFFFF"
                    app:layout_constraintEnd_toEndOf="@+id/nama_TIL"
                    app:layout_constraintStart_toStartOf="@+id/nama_TIL"
                    app:layout_constraintTop_toBottomOf="@+id/nama_TIL">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/usia_text"
                        android:inputType="text"
                        android:textColorHint="#78909C" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/jenis_hewan"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/usia_TIL"
                    app:layout_constraintTop_toBottomOf="@+id/usia_TIL" />

                <RadioGroup
                    android:id="@+id/jenisHewan_RG"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:checkedButton="@+id/ayam"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="@+id/usia_TIL"
                    app:layout_constraintStart_toStartOf="@+id/usia_TIL"
                    app:layout_constraintTop_toBottomOf="@+id/textView">

                    <RadioButton
                        android:id="@+id/ayam"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="12dp"
                        android:text="@string/label_1"
                        android:textColor="#FFFFFF" />

                    <RadioButton
                        android:id="@+id/sapi"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="12dp"
                        android:text="@string/label_2"
                        android:textColor="#FFFFFF" />

                    <RadioButton
                        android:id="@+id/kambing"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="12dp"
                        android:text="@string/label_3"
                        android:textColor="#FFFFFF" />
                </RadioGroup>


                <Button
                    android:id="@+id/submit_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="#5D6DC5"
                    android:text="@string/add"
                    android:textColor="#FAFAFA"
                    android:textStyle="bold"
                    app:cornerRadius="24dp"
                    app:layout_constraintEnd_toEndOf="@+id/jenisHewan_RG"
                    app:layout_constraintStart_toStartOf="@+id/jenisHewan_RG"
                    app:layout_constraintTop_toBottomOf="@+id/jenisHewan_RG" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>